refactor: simplifica a conversão de listas para DTOs utilizando toList()